--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,189 @@
 ---
+import "../styles/style.css";
+import MainLayout from "../layouts/MainLayout.astro";
+import Button from "../components/Button.astro";
+import Card from "../components/Card.astro";
+import ScrollingContainer from "../components/ScrollingContainer.astro";
 
+import { Icon } from "astro-icon/components";
+
+import { cardContent } from "../data/card-content.js";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title="Home">
+  <section class="hero">
+    <article class="tekst-knap">
+      <div class="tekst">
+        <h1>Adam Buschemia Business Consultant</h1>
+        <p>Get help from Alex Moore, a professional business coach with advanced experience on growth and business scaling.</p>
+      </div>
+      <Button style="secondary" linket="#">Book a meeting</Button>
+    </article>
+    <img src="https://s3-alpha-sig.figma.com/img/18ac/a905/855e7462a88e8579e28bfc183e76927c?Expires=1726444800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=i8~clkh4soCPLACLtVSrc60rCn~Tu10vdXkhh6oxVelDbrV~~cf-ONjLemAM4LqcMH6uOgjz7txX0dVK5jOOu4unX~MGE-kJwMH-0N47UX6qSq64n9xNnC0r2e6ZAx~t5osTi5AQcXnPJbh8K7KZOYO5t-owpYWWaRJzryAfJsD9Xlu7lc3io9Z6nfoT-9w5ikGjfSC7x-0~AUGfk5Ds6GNTY3xYxUBiYexNt3aZpsdEcA83ofVAlYkwapBb22Crgl1y~uciYe-iyCBID6LXw0O15TTc3aZJOXBSnUElTa0wqxa6Mx0sGCbpk-rJACbpcO~FNv5hBtUSmX7N2FyC2w__" alt="" />
+  </section>
+
+  <section class="who-we-are">
+    <Card />
+    <Card />
+    <Card />
+  </section>
+
+  <section class="what-to-expect">
+    <img src="https://s3-alpha-sig.figma.com/img/59aa/392f/a60bf28b59fa6920c44db54965a542ca?Expires=1726444800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=bK~PpUZth~4ln7bpJBYbvG4G6VPtqlrhcC801P1sI7xbw9f7YyHhXFCbgBcgP-8ujnaLgaw5a8Yfwjg7dy6pE37rpoGP9rFXobYPx157wWBy8Vlw2Y58I1CB8fBqGWNH4wKlwubDKuHL6~FTd5kpKnVzj6esxwWPAsHLUwyjcJGzcq0BKn7LILN2iRGSEgT4I7wCtiv3ubk59H2XaDKtfjRQX6644JZI7TKFgCc0F7x7pQnkzji8bOsui24-~NEK6oU0iYv~TsTvGLTnkHhNpvsAK6ySDZr3KZV9pWnAXKMOjaI40wrzOa88btW~jqAdkv9DMvswy3k-h0pYWY-EQw__" alt="" />
+    <article>
+      <div class="title">
+        <p>WE'LL WORK WITH YOU</p>
+      </div>
+      <div class="content">
+        <div>
+          <h2>What To Expect</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <ul>
+          <li>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day.</li>
+          <li>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test override the digital.</li>
+        </ul>
+      </div>
+    </article>
+  </section>
+
+  <section class="services">
+    <div class="teksten">
+      <h2>Financial Projections</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+    <ScrollingContainer cardContent={cardContent} />
+  </section>
+</MainLayout>
+
+<style>
+  :root {
+    --checkmark-icon: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><path fill="%234EAF4E" d="M176.49 95.51a12 12 0 0 1 0 17l-56 56a12 12 0 0 1-17 0l-24-24a12 12 0 1 1 17-17L112 143l47.51-47.52a12 12 0 0 1 16.98.03M236 128A108 108 0 1 1 128 20a108.12 108.12 0 0 1 108 108m-24 0a84 84 0 1 0-84 84a84.09 84.09 0 0 0 84-84"/></svg>');
+  }
+
+  ul {
+    display: grid;
+    gap: 1rem;
+  }
+
+  li {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1rem;
+    color: #595566;
+  }
+
+  li:before {
+    content: "";
+    width: 1.6rem;
+    aspect-ratio: 1;
+    background: var(--checkmark-icon) 50% 50% / contain no-repeat;
+  }
+
+  .hero {
+    background-color: var(--color-primary3);
+    color: var(--color-secondary2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+    padding-inline: 32px;
+
+    img {
+      width: 100%;
+      max-width: 600px;
+    }
+  }
+
+  .tekst-knap {
+    display: inline-flex;
+    flex-direction: column;
+    gap: 29px;
+  }
+
+  .tekst {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  h1 {
+    font-weight: var(--font-weight-700);
+    margin-bottom: 32px;
+  }
+
+  .who-we-are {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .what-to-expect {
+    justify-content: center;
+    align-items: flex-start;
+    gap: 82px;
+    display: inline-flex;
+    padding: 263px 0;
+
+    img {
+      width: 20%;
+    }
+
+    article {
+      display: flex;
+      flex-direction: column;
+      gap: 14px;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+    }
+  }
+
+  .title {
+    padding-left: 12px;
+    padding-right: 12px;
+    background: var(--color-primary1);
+    border-radius: 20px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 10px;
+    display: inline-flex;
+  }
+
+  .services {
+    margin: 0;
+    /* scroll-snap-align: center; */
+    scroll-snap-stop: always;
+    display: flex;
+    flex-direction: column;
+    place-content: center;
+    align-items: center;
+    gap: var(--content-gap);
+
+    > * {
+      /* max-width: var(--content-width); */
+    }
+    h2 {
+      font-weight: bold;
+    }
+  }
+
+  .teksten {
+    max-width: 50rem;
+  }
+  @media screen and (min-width: 768px) {
+  }
+
+  @media screen and (min-width: 1024px) {
+  }
+
+  @media screen and (min-width: 1440px) {
+  }
+</style>
+
+<script></script>
