--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -22,6 +22,10 @@ import "../styles/style.css";
       background: var(--color-primary3);
       color: var(--color-secondary2);
       gap: 141px;
+
+      h4 {
+        margin-bottom: 12px;
+      }
     }
 
     form {
