--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,12 +1,14 @@
 ---
 import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
-import Newsletter from "../components/Newsletter.astro";
+
+import Popover from "../components/Popover.astro";
 ---
 
 <MainLayout title="About">
   <section>
     <Newsletter />
+    <Popover />
   </section>
 </MainLayout>
 
