--- a/src/pages/teamsingle.astro
+++ b/src/pages/teamsingle.astro
@@ -1,32 +1,24 @@
 ---
 import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
+import Newsletter from "../components/Newsletter.astro";
 ---
 
 <MainLayout title="Team Single">
-  
-  <main>
-
-  
-   
-  </main>
+  <section>
+    <Newsletter />
+  </section>
 </MainLayout>
 
 <style>
-  
-  
   @media screen and (min-width: 768px) {
-    
   }
 
   @media screen and (min-width: 1024px) {
-   
   }
 
   @media screen and (min-width: 1440px) {
   }
 </style>
 
-<script>
-  
-</script>
+<script></script>
