--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,7 @@ import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
 import Newsletter from "../components/Newsletter.astro";
 import Accordion from "../components/Accordion.astro";
+import TeamCard from "../components/TeamCard.astro";
 ---
 
 <MainLayout title="About">
@@ -11,7 +12,9 @@ import Accordion from "../components/Accordion.astro";
     <h2>We champion the bold to achieve the extraordinary</h2>
     <p>Ippsum is the result of synergy between our teams and our customers. Our company culture is focused on excellent productivity, customer satisfaction, respect for team.</p>
 
-    <article class="team-grid"></article>
+    <article class="team-grid">
+      <TeamCard />
+    </article>
   </section>
   <section class="accordion">
     <div class="overskrift-tag">
