--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,7 @@
     --color-secondary2: #ffffff;
 
     --color-text: #595566;
+    --color-card: #ebebeb;
     --color-faq: #dadada;
     --color-navigation: #1b1b1b 91%;
 
