styles og sådan

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,6 +48,7 @@ import Tag from "../components/Tag.astro";
 
   <section class="services">
     <div class="teksten">
+      <img src="/src/icons/financial-projections.svg" alt="" />
       <h2>Financial Projections</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
