--- a/src/pages/teamsingle.astro
+++ b/src/pages/teamsingle.astro
@@ -1,14 +1,9 @@
 ---
 import "../styles/style.css";
 import MainLayout from "../layouts/MainLayout.astro";
-import Newsletter from "../components/Newsletter.astro";
 ---
 
-<MainLayout title="Team Single">
-  <section>
-    <Newsletter />
-  </section>
-</MainLayout>
+<MainLayout title="Team Single" />
 
 <style>
   @media screen and (min-width: 768px) {
