--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,9 +1,11 @@
 ---
 import "../styles/style.css";
+import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
+import Newsletter from "../components/Newsletter.astro";
 
-const { title } = Astro.props;
+const { title = "opgave" } = Astro.props;
 ---
 
 <html lang="en">
@@ -18,9 +20,9 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
 
     <!-- SEO metadata -->
-    <meta name="description" content="Barselona | Eksamensprojekt om Barselona" />
-    <meta name="author" content="Ester, Sebastian, Rose og Nicoline" />
-    <meta name="copyright" content="Team_10" />
+    <meta name="description" content="Implementer Figma Design 3 Semester" />
+    <meta name="author" content="Ester Catrine Piazza-Koldbye" />
+    <meta name="copyright" content="Ester Catrine Piazza-Koldbye" />
 
     <!-- Den kommer ikke frem hos søgemaskiner -->
     <meta name="robots" content="noindex, nofollow" />
@@ -48,6 +50,8 @@ const { title } = Astro.props;
     <Navigation />
     <main>
       <slot />
+
+      <Newsletter />
     </main>
 
     <Footer />
