--- a/src/components/EmployeeCard.astro
+++ b/src/components/EmployeeCard.astro
@@ -6,6 +6,8 @@ const { img, name, title, description } = Astro.props;
 
 const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/images/*.{jpeg,jpg,png,gif}");
 if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/images/*.{jpeg,jpg,png,gif}"`);
+
+const employeesData = await fetch("https://raw.githubusercontent.com/espi0001/frontend-design/main/resources/json/employees.json").then((res) => res.json());
 ---
 
 <article>
