--- a/src/components/EmployeeCard.astro
+++ b/src/components/EmployeeCard.astro
@@ -2,14 +2,18 @@
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
-const { img, name, title, description } = Astro.props;
+const { employee } = Astro.props;
+const { img, name, title, description } = employee;
 
 const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/images/*.{jpeg,jpg,png,gif}");
 if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/images/*.{jpeg,jpg,png,gif}"`);
-
-const employeesData = await fetch("https://raw.githubusercontent.com/espi0001/frontend-design/main/resources/json/employees.json").then((res) => res.json());
 ---
 
 <article>
   <Image src={images[img]()} alt={name} width={100} />
 </article>
+
+<style>
+  @layer components {
+  }
+</style>
