--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -1,22 +1,23 @@
 ---
-import "../styles/style.css";
 const { style } = Astro.props;
 ---
 
 <p class={style}><slot /></p>
 
 <style>
-  p {
-    padding: 0 19px;
-    border-radius: 20px;
-  }
-  .primary {
-    background: var(--color-primary2);
-    color: var(--color-secondary2);
-  }
+  @layer components {
+    p {
+      padding: 0 19px;
+      border-radius: 20px;
+    }
+    .primary {
+      background: var(--color-primary2);
+      color: var(--color-secondary2);
+    }
 
-  .secondary {
-    background: var(--color-primary1);
-    color: var(--color-primary3);
+    .secondary {
+      background: var(--color-primary1);
+      color: var(--color-primary3);
+    }
   }
 </style>
