--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -9,8 +9,8 @@ const employeeData = await fetch("https://raw.githubusercontent.com/espi0001/fro
 ---
 
 <MainLayout title="Team">
-  <!-- <EmployeeCard /> -->
-  <EmployeeSection data={data} />
+  <EmployeeCard />
+  <EmployeeSection data={employeeData} />
 </MainLayout>
 
 <style>
