--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,3 @@
----
-import "../styles/style.css";
----
-
 <footer>
   <div class="content">
     <div class="logo">
@@ -20,88 +16,71 @@ import "../styles/style.css";
 </footer>
 
 <style>
-  footer {
-    background-color: var(--color-primary3);
-    color: var(--color-secondary2);
+  @layer components {
+    footer {
+      background-color: var(--color-primary3);
+      color: var(--color-secondary2);
 
-    align-items: center;
+      align-items: center;
 
-
-    padding-top: 46px; 
-    padding-bottom: 46px; 
-    padding-inline: 360px;
-
-  }
-
-  .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 36px;
-    /* margin-top: 32px; */
-  }
-  .logo {
-    a {
-    font-family: "Cabin", sans-serif;
-      font-size: 1.875rem;
-      font-weight: var(--font-weight-600);
+      padding-top: 46px;
+      padding-bottom: 46px;
+      padding-inline: 360px;
     }
-  }
-  .sociale_links {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    justify-content: center;
-  }
-  .sociale_links a {
-    background-color: var(--color_white);
-    border-radius: 50px;
-    width: 30px;
-    height: auto;
-    font-size: var(--font_size_medium);
-  }
-  .sociale_links a:hover {
-    background-color: var(--color_blue);
-  }
-  .links {
-    display: flex;
-    gap: 32px;
-    text-decoration: none;
-  }
- 
-  hr {
-    width: 100%;
-    color: #707070;
-  }
 
-  .credits {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 32px;
-    margin-top: 26px;
-    flex-direction: column-reverse;
-  }
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 36px;
+      /* margin-top: 32px; */
+    }
+    .logo {
+      a {
+        font-family: "Cabin", sans-serif;
+        font-size: 1.875rem;
+        font-weight: var(--font-weight-600);
+      }
+    }
+    .sociale_links {
+      display: flex;
+      gap: 12px;
+      align-items: center;
+      justify-content: center;
+    }
+    .sociale_links a {
+      background-color: var(--color_white);
+      border-radius: 50px;
+      width: 30px;
+      height: auto;
+      font-size: var(--font_size_medium);
+    }
+    .sociale_links a:hover {
+      background-color: var(--color_blue);
+    }
+    .links {
+      display: flex;
+      gap: 32px;
+      text-decoration: none;
+    }
 
-  .footer_links {
-    display: flex;
-    gap: 24px;
-  }
+    hr {
+      width: 100%;
+      color: #707070;
+    }
 
-
-
-  
-
-  /* ___________________________ TABLET  ___________________________*/
-  @media screen and (min-width: 768px) {
     .credits {
-      flex-direction: row;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 32px;
+      margin-top: 26px;
+      flex-direction: column-reverse;
     }
 
-  
-  }
-
-  /* ___________________________ DESKTOP  ___________________________*/
-  @media screen and (min-width: 1024px) {
+    .footer_links {
+      display: flex;
+      gap: 24px;
+    }
   }
 </style>
