--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -1,7 +1,3 @@
----
-import "../styles/style.css";
----
-
 <article>
   <div class="tekst">
     <h4>Subscribe Our Newsletter</h4>
@@ -15,45 +11,47 @@ import "../styles/style.css";
   </form>
 
   <style>
-    article {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: var(--color-primary3);
-      color: var(--color-secondary2);
-      gap: 141px;
-
-      h4 {
-        margin-bottom: 12px;
-      }
-    }
-
-    form {
-      display: flex;
-      align-items: center;
-      gap: 21px;
-
-      input#email {
-        padding: 22px 155px 22px 33px;
-        border-radius: 54px;
-        border: 1px #e3e3e3;
-        color: #a9a9a9;
-      }
-    }
-
-    button {
-      display: inline-block;
-      padding: 16px 37px;
-      transition: all 0.55s ease;
-      border-radius: 42px;
-      background: var(--color-primary1);
-      color: var(--color-primary3);
-
-      &:hover {
-        transform: scale(1.04);
+    @layer components {
+      article {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background: var(--color-primary3);
         color: var(--color-secondary2);
-        text-decoration: none;
+        gap: 141px;
+
+        h4 {
+          margin-bottom: 12px;
+        }
+      }
+
+      form {
+        display: flex;
+        align-items: center;
+        gap: 21px;
+
+        input#email {
+          padding: 22px 155px 22px 33px;
+          border-radius: 54px;
+          border: 1px #e3e3e3;
+          color: #a9a9a9;
+        }
+      }
+
+      button {
+        display: inline-block;
+        padding: 16px 37px;
+        transition: all 0.55s ease;
+        border-radius: 42px;
+        background: var(--color-primary1);
+        color: var(--color-primary3);
+
+        &:hover {
+          transform: scale(1.04);
+          background: var(--color-primary3);
+          color: var(--color-secondary2);
+          text-decoration: none;
+        }
       }
     }
   </style>
