--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -1,5 +1,4 @@
 ---
-import "../styles/style.css";
 const { cardContent } = Astro.props;
 ---
 
@@ -16,32 +15,34 @@ const { cardContent } = Astro.props;
 </ul>
 
 <style>
-  ul {
-    list-style: none;
-    display: flex;
-    overflow-x: auto;
-    gap: var(--card-gap);
-    padding: 0;
+  @layer components {
+    ul {
+      list-style: none;
+      display: flex;
+      overflow-x: auto;
+      gap: var(--card-gap);
+      padding: 0;
 
-    scroll-snap-type: x mandatory;
-    grid-column: full;
-    padding-inline: max(1rem, 50% - var(--content-width) / 2);
-    padding-block-end: 1rem;
+      scroll-snap-type: x mandatory;
+      grid-column: full;
+      padding-inline: max(1rem, 50% - var(--content-width) / 2);
+      padding-block-end: 1rem;
 
-    > li {
-      flex: 1 0 50%;
-      background: var(--color-card);
-      padding: var(--card-padding);
-      border-radius: var(--card-border-radius);
-      color: var(--color-primary3);
+      > li {
+        flex: 1 0 50%;
+        background: var(--color-card);
+        padding: var(--card-padding);
+        border-radius: var(--card-border-radius);
+        color: var(--color-primary3);
 
-      &:nth-child(2) {
-        background: var(--color-primary3); /* Sort baggrund */
-        color: var(--color-secondary2); /* Hvid skrift */
-      }
+        &:nth-child(2) {
+          background: var(--color-primary3); /* Sort baggrund */
+          color: var(--color-secondary2); /* Hvid skrift */
+        }
 
-      img {
-        width: 10%;
+        img {
+          width: 10%;
+        }
       }
     }
   }
