--- a/src/components/TeamCard.astro
+++ b/src/components/TeamCard.astro
@@ -1,7 +1,3 @@
----
-import "../styles/style.css";
----
-
 <div class="card">
   <div>
     <img src="https://s3-alpha-sig.figma.com/img/18ac/a905/855e7462a88e8579e28bfc183e76927c?Expires=1726444800&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=i8~clkh4soCPLACLtVSrc60rCn~Tu10vdXkhh6oxVelDbrV~~cf-ONjLemAM4LqcMH6uOgjz7txX0dVK5jOOu4unX~MGE-kJwMH-0N47UX6qSq64n9xNnC0r2e6ZAx~t5osTi5AQcXnPJbh8K7KZOYO5t-owpYWWaRJzryAfJsD9Xlu7lc3io9Z6nfoT-9w5ikGjfSC7x-0~AUGfk5Ds6GNTY3xYxUBiYexNt3aZpsdEcA83ofVAlYkwapBb22Crgl1y~uciYe-iyCBID6LXw0O15TTc3aZJOXBSnUElTa0wqxa6Mx0sGCbpk-rJACbpcO~FNv5hBtUSmX7N2FyC2w__" alt="" />
@@ -20,17 +16,19 @@ import "../styles/style.css";
 
       <img src="../icons/instagram.svg" alt="" />
     </div>
-
-    <style>
-      .card {
-        display: grid;
-        gap: 25px;
-
-        .social {
-          display: flex;
-          gap: 29px;
-        }
-      }
-    </style>
   </div>
 </div>
+
+<style>
+  @layer components {
+    .card {
+      display: grid;
+      gap: 25px;
+
+      .social {
+        display: flex;
+        gap: 29px;
+      }
+    }
+  }
+</style>
