--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -11,6 +11,7 @@ const { style, linket } = Astro.props;
       padding: 16px 37px;
       transition: all 0.55s ease;
       border-radius: 42px;
+      align-self: start;
     }
 
     a:hover {
