--- a/src/components/EmployeeSection.astro
+++ b/src/components/EmployeeSection.astro
@@ -1,23 +1,30 @@
 ---
+import EmployeeCard from "./EmployeeCard.astro";
 const { data } = Astro.props;
 console.log(data);
 ---
 
-<article data-theme="dark">
-  {data.map((employee) => <EmployeeCard employee={employee} />)}
-</article>
+<section>
+  {data.map((employee) => <EmployeeCard {employee} />)}
+</section>
 
 <style>
   @layer components {
-    [data-theme="dark"] & {
-      background: var(--color-primary3);
+    [data-theme="dark"] {
+      --bg-section: red;
+      --text-section: #fff;
+      --bg-card: blue;
+      --text-card: #fff;
     }
 
-    article {
-      background: red;
+    section {
+      --bg-section: #fff;
+      --text-section: red;
+      --bg-card: #fff;
+      --text-card: blue;
       padding: 2rem;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      color: var(--text-section);
+      background: var(--bg-section);
     }
   }
 </style>
