--- a/src/components/EmployeeCard.astro
+++ b/src/components/EmployeeCard.astro
@@ -1,6 +1,7 @@
 ---
 import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
 
 const { employee } = Astro.props;
 const { img, name, title, description } = employee;
@@ -10,17 +11,33 @@ if (!images[img]) throw new Error(`"${img}" does not exist in glob: "src/assets/
 ---
 
 <article>
-  <h2>{name}</h2>
-  <h3>{title}</h3>
-  <p>{description}</p>
   <Image src={images[img]()} alt={name} />
+  <h5>{name}</h5>
+  <p>{description}</p>
+  <div class="iconer">
+    <Icon name="instagram" />
+    <Icon name="twitter" />
+    <Icon name="facebook" />
+  </div>
 </article>
 
 <style>
   @layer components {
     article {
-      color: var(--text-card);
-      background: var(--bg-card);
+      color: var(--color-primary3);
+      text-align: center;
+      p {
+        color: var(--color-text);
+      }
+    }
+    img {
+      border-radius: 20px;
+    }
+
+    .iconer {
+      display: flex;
+      gap: 29px;
+      justify-content: center;
     }
   }
 </style>
