--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -9,6 +9,7 @@ const { style } = Astro.props;
     p {
       padding: 0 19px;
       border-radius: 20px;
+      align-self: start;
     }
     .primary {
       background: var(--color-primary2);
