--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -19,6 +19,7 @@
         background: var(--color-primary3);
         color: var(--color-secondary2);
         gap: 141px;
+        padding: 87px;
 
         h4 {
           margin-bottom: 12px;
