--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,12 +7,16 @@ import ScrollingContainer from "../components/ScrollingContainer.astro";
 import { cardContent } from "../data/card-content.js";
 
 import Tag from "../components/Tag.astro";
+
+import { Icon } from "astro-icon/components";
 import { Image } from "astro:assets";
 import sarah from "../assets/images/sarah.jpg";
 import home1 from "../assets/home1.jpg";
 import home2 from "../assets/home2.jpg";
 import home3 from "../assets/home3.jpg";
 import home4 from "../assets/home4.jpg";
+
+import ContactInfo from "../components/ContactInfo.astro";
 ---
 
 <MainLayout title="Home">
@@ -57,10 +61,23 @@ import home4 from "../assets/home4.jpg";
     <ScrollingContainer cardContent={cardContent} />
   </section>
 
-  <section>
-    <Image alt="" src={home2} />
-    <Image alt="" src={home3} />
-    <Image alt="" src={home4} />
+  <section class="sidste">
+    <article>
+      <Tag style="secondary">Proccess</Tag>
+      <h2>Contact Us. It’s Easy.</h2>
+      <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative.</p>
+
+      <ContactInfo iconname="call-today" tekst="Call Today" h6="+1 800 100 900" />
+      <ContactInfo iconname="monday-friday" tekst="Monday To Friday" h6="9AM - 5PM" />
+      <ContactInfo iconname="adress-grey" tekst="USA Office" h6="195 Devonshire St Boston, MA 02110" />
+    </article>
+    <div class="billede-grid">
+      <Image alt="" src={home2} />
+      <div>
+        <Image alt="" src={home3} />
+        <Image alt="" src={home4} />
+      </div>
+    </div>
   </section>
 </MainLayout>
 
@@ -94,10 +111,10 @@ import home4 from "../assets/home4.jpg";
     background-color: var(--color-primary3);
     color: var(--color-secondary2);
     display: flex;
+
     align-items: center;
     justify-content: center;
     gap: 32px;
-    padding-inline: 32px;
 
     img {
       width: 100%;
@@ -108,12 +125,6 @@ import home4 from "../assets/home4.jpg";
   .tekst-knap {
     display: inline-flex;
     flex-direction: column;
-  }
-
-  .tekst {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
   }
 
   h1 {
@@ -128,15 +139,11 @@ import home4 from "../assets/home4.jpg";
   }
 
   .what-to-expect {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     justify-content: center;
-
     gap: 82px;
-    display: flex;
-    padding: 263px 0;
-
-    img {
-      width: 20%;
-    }
+    color: var(--color-primary3);
 
     article {
       display: flex;
@@ -171,6 +178,7 @@ import home4 from "../assets/home4.jpg";
     place-content: center;
     align-items: center;
     gap: var(--content-gap);
+    color: var(--color-primary3);
 
     > * {
       /* max-width: var(--content-width); */
@@ -182,5 +190,33 @@ import home4 from "../assets/home4.jpg";
 
   .teksten {
     max-width: 50rem;
+  }
+  .sidste {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    color: var(--color-primary3);
+    gap: 69px;
+  }
+
+  .icons {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+
+    svg {
+      width: 52px;
+    }
+  }
+
+  .billede-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+
+    :last-child {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 </style>
