--- a/src/components/ScrollingContainer.astro
+++ b/src/components/ScrollingContainer.astro
@@ -35,7 +35,7 @@ const { cardContent } = Astro.props;
         border-radius: var(--card-border-radius);
         color: var(--color-primary3);
 
-        &:nth-child(2) {
+        &:hover {
           background: var(--color-primary3); /* Sort baggrund */
           color: var(--color-secondary2); /* Hvid skrift */
         }
