--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -179,6 +179,7 @@ import ContactInfo from "../components/ContactInfo.astro";
     align-items: center;
     gap: var(--content-gap);
     color: var(--color-primary3);
+    background: var(--color-secondary1);
 
     > * {
       /* max-width: var(--content-width); */
