--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -20,5 +20,10 @@ const { style } = Astro.props;
       background: var(--color-primary1);
       color: var(--color-primary3);
     }
+
+    .tertiary {
+      background: var(--color-secondary2);
+      color: var(--color-primary3);
+    }
   }
 </style>
