--- a/src/components/Newsletter.astro
+++ b/src/components/Newsletter.astro
@@ -36,6 +36,7 @@
           border-radius: 54px;
           border: 1px #e3e3e3;
           color: #a9a9a9;
+          background: var(--color-secondary2);
         }
       }
 
