--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,8 +15,12 @@ import home1 from "../assets/home1.jpg";
 import home2 from "../assets/home2.jpg";
 import home3 from "../assets/home3.jpg";
 import home4 from "../assets/home4.jpg";
-
+import Overskrift from "../components/Overskrift.astro";
 import ContactInfo from "../components/ContactInfo.astro";
+
+import CorevaluesSection from "../components/CorevaluesSection.astro";
+
+const corevaluesData = await fetch("https://raw.githubusercontent.com/espi0001/frontend-design/main/resources/json/corevalues.json").then((res) => res.json());
 ---
 
 <MainLayout title="Home">
@@ -70,13 +74,8 @@ import ContactInfo from "../components/ContactInfo.astro";
 
   <section class="core">
     <Tag style="secondary">Growing with our Clients</Tag>
-    <div class="teksten2">
-      <div>
-        <h2>Our core values & principles</h2>
-        <p>Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.</p>
-      </div>
-      <Button style="secondary" linket="#">Get in touch</Button>
-    </div>
+    <Overskrift style="secondary" linket="#" buttonProps={{ style: "secondary" }} h2="Our core values & principles" tekst="Capitalize on low hanging fruit to identify a ballpark value added activity beta test. Override the digital divide with additional from DevOps.">Get in touch</Overskrift>
+    <CorevaluesSection data={corevaluesData} />
   </section>
 
   <section class="sidste">
